# icp2d

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml  run_tests.sh
include/icp2d/core/: kdtree.hpp  kdtree_omp.hpp  knn_result.hpp  projection.hpp  traits.hpp
include/icp2d/registration/: optimizaer.hpp  optimizer.hpp  point_to_line_icp_factor.hpp  reduction.hpp  registration.hpp  registration_result.hpp  rejector.hpp  termination_criteria.hpp
include/icp2d/util/: general_factor.hpp  lie.hpp  line_icp_factor.hpp  point_icp_factor.hpp  robust_kernel.hpp
src/: main.cpp
task/: COMPLETED.md  NOTES.md  TODO.md
test/: simple_point_cloud_2d.hpp  test_basic_icp.cpp  test_kdtree.cpp  test_kdtree_omp.cpp
